tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax13/Test.java


public class Test {
	
	@interface SomeAnnotation {
		   String _();
	}
	
	public static void main(String[] args) {
		
    }
	
	
}